ready to be published
will push to master. everything is functional. text/content could use updates, but website layout is done.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>Alana Kim - Welcome to My Page</title>
-    <link rel="icon" type="image/png" href="/img/logos_small-logo.png" />
+    <link rel="icon" type="image/png" href="img/logos_small-logo.png" sizes="16x16" />
     <!-- Custom fonts for this template -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
@@ -15,6 +15,8 @@
     <link href="https://fonts.googleapis.com/css?family=Karla|Oswald|Francois+One|Open+Sans" rel="stylesheet">
     <!-- Custom styles for this template -->
     <link href="css/style.css" rel="stylesheet">
+    <script src="js/main.js"></script>
+    <script src="vendor/jquery.min.js"></script>
 </head>
 
 <body>
@@ -40,36 +42,34 @@
     </div>
     <div class="portfolio-wrapper">
         <figure class="worksamples" id="item1">
-            <img class="thumbnail work-preview-l" src="work-sample/placemaking_iot_illuminate_Page_1.jpg" alt="Illuminate: A Smart Lighting System for Place Making" style="object-position: 5% 0;" />
+            <a href="item1.html" class="work-link">
+            <img class="thumbnail work-preview-l" src="work-sample/placemaking_iot_illuminate-xs.jpg" alt="Illuminate: A Smart Lighting System for Place Making" style="object-position: 5% 0;"/>
             <div class="work-description">
                 <h3 class="capt-title">Illuminate: A Smart Lighting System for Place Making</h3>
                 <p class="capt-body">Illuminate is a project completed for Sensing the City class at University of Pennsylvania. Envisioning a smart lighting system for better place-making, expanding the usefulness of public spaces around the city by activating them after sundown, we developed a arduino-run prototype using motion and light sensors.</p>
-                <a href=".../..." class="work-link">see more</a>
             </div>
-            <dialog id="fullview1" class="modal">
-                <span class="close">&times;</span>
-                <img class="modal-content" src="work-sample/suitabilityanalysis_pamedicalmarijuana.jpg" />
-            </dialog>
+          </a>
         </figure>
         <figure class="worksamples" id="item2">
-            <img class="work-preview-p" src="work-sample/spatialregression_predictinghousingprice.jpg" alt="Predicting Allegheny County Home Values: Three Types of Spatial Regression Models" style="object-position: 10% 10%;" />
+            <a href="item2.html" class="work-link">
+            <img class="work-preview-p" src="work-sample/spatialregression_predictinghousingprice-xs.jpg" alt="Predicting Allegheny County Home Values: Three Types of Spatial Regression Models" style="object-position: 10% 10%;" />
             <div class="work-description">
                 <h3 class="capt-title">Predicting Home Values Using Three Types of Spatial Regression Models</h3>
                 <p class="capt-body">In this study predicting median home values of census tracts in Allegheny County, PA, spatial lag, spatial error, and geographically weighted regression models were used to test if they can better account for spatial autocorrelation found in the OLS model residuals.</p>
-                <a href=".../..." class="work-link">see more</a>
             </div>
+          </a>
         </figure>
         <figure class="worksamples" id="item3">
-            <img class="work-preview-l" src="work-sample/suitabilityanalysis_pamedicalmarijuana.jpg" alt="Overlay Suitability Analysis: Locating Medical Marijuana Dispensaries in Philadelphia" style="object-position: 45% 10%;" />
+            <a href="item3.html" class="work-link">
+            <img class="work-preview-l" src="work-sample/suitabilityanalysis_pamedicalmarijuana-xs.jpg" alt="Overlay Suitability Analysis: Locating Medical Marijuana Dispensaries in Philadelphia" style="object-position: 45% 10%;" />
             <div class="work-description">
-                <h3 class="capt-title">Suitability Analysis with Map Overlay for Medical Marijuana Dispensaries</h3>
+                <h3 class="capt-title">Suitability Visualization with Map Overlay for Medical Marijuana Dispensaries</h3>
                 <p class="capt-body">This simple raster GIS exercise uses three spatial attributes to determine location suitability for medical marijuana dispensaries in Philadelphia County.</p>
-                <a href=".../..." class="work-link">see more</a>
-            </div>
+            </div></a>
         </figure>
         <figure class="worksamples" id="item4">
             <a href="https://issuu.com/alanakims/docs/gentrification_studio_workingpaper2" target="_blank" class="work-link">
-                <img class="work-preview-p" src="work-sample/policypaper_gentrification_cover.jpg" alt="Policy Working Paper: Comparative Gentrification Policy for Displacement, Housing Instability, and Homelessness" style="object-position: 10% 10%;" />
+                <img class="work-preview-p" src="work-sample/policypaper_gentrification_cover-xs.jpg" alt="Policy Working Paper: Comparative Gentrification Policy for Displacement, Housing Instability, and Homelessness" style="object-position: 10% 10%;" />
                 <div class="work-description">
                     <h3 class="capt-title">Comparative Gentrification Policy: Displacement, Housing Instability, and Homelessness</h3>
                     <p class="capt-body">In-depth look at five major American cities -- Denver, Los Angeles, New York City, San Francisco, and Seattle -- for strategies for public policy dealing with processes of gentrification. This policy working paper was completed by a group of students in Fall 2017 as part of the PennDesign City + Regional Planning Fall Studio.</p>
@@ -78,46 +78,49 @@
                 </a>
         </figure>
         <figure class="worksamples" id="item5">
-            <img class="work-preview-p" src="work-sample/mappingairquality_baltimoreave_Page_07.jpg" alt="Mapping Air Quality on Baltimore Avenue in West Philadelphia" style="object-position: 10% 30%;" />
+            <a href="item5.html" class="work-link">
+            <img class="work-preview-p" src="work-sample/mappingairquality_baltimoreave-xs.jpg" alt="Mapping Air Quality on Baltimore Avenue in West Philadelphia" style="object-position: 10% 30%;" />
             <div class="work-description">
                 <h3 class="capt-title">Mapping Air Quality on Baltimore Avenue in West Philadelphia</h3>
                 <p class="capt-body">Data visualization of air quality data, collected over time and space using Arduino microcontroller and Shenyei Air Quality sensor. </p>
-                <a href=".../..." class="work-link">see more</a>
             </div>
+          </a>
         </figure>
         <figure class="worksamples" id="item6">
             <a href="https://issuu.com/alanakims/docs/reading_forward_moving_the_city_tow" target="_blank" class="work-link">
-                <img class="work-preview-l" src="work-sample/sustainabilityplan_readingforward_cover.jpg" alt="Reading Forward: Moving the City Toward a More Sustainable Future" style="object-position: 90% 10%;" />
-
-                              <div class="work-description">
+                <img class="work-preview-l" src="work-sample/sustainabilityplan_readingforward_cover-xs.jpg" alt="Reading Forward: Moving the City Toward a More Sustainable Future" style="object-position: 90% 10%;" />
+<div class="work-description">
                     <h3 class="capt-title">Reading Forward: Moving the City Toward a More Sustinable Future</h3>
                     <p class="capt-body">Sustainability plan developed by a team of PennDesign City + Regional Planning students as part of a planning studio. The final plan was awarded American Planning Association PA Southeast Chapter's John E. Pickett Student Scholarship in 2017.</p>
                 </div>
                               </a>
         </figure>
         <figure class="worksamples" id="item7">
-            <img class="work-preview-l" src="work-sample/gis_medicalmarijuana_communityresistance_Page_2.jpg" alt="Off Limits: Philadelphia Medical Marijuana Act, Childcare Facilities, and Community Resistance" style="object-position: 40% 10%; " />
+            <a href="item7.html" class="work-link">
+            <img class="work-preview-l" src="work-sample/gis_medicalmarijuana_communityresistance-xs.jpg" alt="Off Limits: Philadelphia Medical Marijuana Act, Childcare Facilities, and Community Resistance" style="object-position: 40% 10%; " />
             <div class="work-description">
                 <h3 class="capt-title">Off Limits; What Spatial Distribution of Childcare Facilities Can Tell Us About Community Resistance</h3>
                 <p class="capt-body">GIS buffer analysis investigating how the spatial distribution of childcare facilities in the context of PA Medical Marijuana Act passed in 2016. Should we amend the law to allow dispensaries within 500-feet from childcare facilities? </p>
-                <a href=".../..." class="work-link">see more</a>
             </div>
+          </a>
         </figure>
         <figure class="worksamples" id="item8">
-            <img class="work-preview-p" src="work-sample/gisrasteranalysis_landuseallocation_full_Page_6.jpg" alt="Raster Analysis for Land Use Allocation" style="object-position: 0 80%;" />
+            <a href="item8.html" class="work-link">
+            <img class="work-preview-p" src="work-sample/gisrasteranalysis_landuseallocation_full-xs.jpg" alt="Raster Analysis for Land Use Allocation" style="object-position: 0 80%;" />
             <div class="work-description">
                 <h3 class="capt-title">GIS Raster Analysis for Land Use Allocation</h3>
                 <p class="capt-body">Raster analysis method developed for a class group project looking at the long-term (2030) city development/land use allocation plan.</p>
-                <a href=".../..." class="work-link">see more</a>
             </div>
+          </a>
         </figure>
         <figure class="worksamples" id="item9">
-            <img class="work-preview-p" src="work-sample/gisanalysis_modelingstormwatervulnerability.jpg" alt="Modeling Stormwater Vulnerability in Pierce County, WA" style="object-position: 0 10%;" />
+            <a href="item9.html" class="work-link">
+            <img class="work-preview-p" src="work-sample/gisanalysis_modelingstormwatervulnerability-xs.jpg" alt="Modeling Stormwater Vulnerability in Pierce County, WA" style="object-position: 0 10%;" />
             <div class="work-description">
                 <h3 class="capt-title">Modeling Stormwater Vulnerability in Pierce County, WA</h3>
                 <p class="capt-body">This GIS environment assessment examines land use patterns around streams as the sources of stormwater runoff stressors in Water Resource Inventory Area (WRIA) 10. </p>
-                <a href=".../..." class="work-link">see more</a>
             </div>
+          </a>
         </figure>
     </div>
     <div class="footer">
@@ -149,7 +152,6 @@
         </ul>
         <p class="copyright text-muted">copyright &copy; alana s kim 2018</p>
     </div>
-    <script src="js/main.js"></script>
 </body>
 
 </html>
