--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>Alana Kim - Welcome to My Page</title>
-    <link rel="icon" type="image/png" href="/img/logos_small-logo.png" />
+    <link rel="icon" type="image/png" href="img/logos_small-logo.png" sizes = "16x16"/>
     <!-- Custom fonts for this template -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
