--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
 
     <link rel="icon" type="image/png" href="img/logos_small-logo.png"/>
-    <title>Alana Kim - Welcome to My Page</title>
+    <title>Evan Cernea - Welcome to My Page</title>
     <link href="css/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
@@ -17,7 +17,7 @@
     <div class="wrapper">
         <div class="header logo-container">
             <a href="index.html" class="logo">
-            <img src="img/logos_full-name-logo.png">
+            <img src="img/EC-logo.png">
             </a>
         </div>
         <ul class="navbar-pages" role="navigation">
@@ -31,14 +31,14 @@
                 <a class="pagelink" href="about.html">ABOUT + CONTACT</a>
             </li>
         </ul>
-        
+
         <div class="about-me">
         </div>
 
         <div class="footer">
             <ul class="footer-bar" role="footer">
                 <li class="social-media">
-                    <a href="https://github.com/aakims">
+                    <a href="https://github.com/ecernea">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fa fa-github fa-stack-1x fa-inverse"></i>
@@ -46,7 +46,7 @@
                 </a>
                 </li>
                 <li class="social-media">
-                    <a href="https://linkedin.com/in/aakims">
+                    <a href="https://www.linkedin.com/in/evan-cernea-74602396/">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -54,7 +54,7 @@
                 </a>
                 </li>
                 <li class="social-media">
-                    <a href="mailto:alanakim12@gmail.com">
+                    <a href="mailto:evan.cernea@gmail.com">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
@@ -62,7 +62,7 @@
                 </a>
                 </li>
             </ul>
-            <p class="copyright text-muted">copyright &copy; alana s kim 2018</p>
+            <p class="copyright text-muted">copyright &copy; evan h cernea 2018</p>
         </div>
     </div>
     </div>
