--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Alana Kim - Welcome to My Page</title>
+    <title>Evan Cernea - Welcome to My Page</title>
     <link rel="icon" type="image/png" href="img/logos_small-logo.png" sizes="16x16" />
     <!-- Custom fonts for this template -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -23,7 +23,7 @@
     <div class="head-wrapper">
         <div class="header">
             <a href="index.html">
-            <img class="logo" src="img/logos_full-name-logo.png">
+            <img class="logo" src="img/EC-logo.png">
             </a>
         </div>
         <div class="navbar">
@@ -42,83 +42,83 @@
     </div>
     <div class="portfolio-wrapper">
         <figure class="worksamples" id="item1">
-            <a href="item1.html" class="work-link">
-            <img class="thumbnail work-preview-l" src="work-sample/placemaking_iot_illuminate-xs.jpg" alt="Illuminate: A Smart Lighting System for Place Making" style="object-position: 5% 0;"/>
+            <a href="https://ecernea.github.io/keras_trash_cans/project1" class="work-link">
+            <img class="thumbnail work-preview-l" src="work-sample/KerasMapGraphic.png" alt="Predicting Trash Cans in Philadelphia" style="object-position: 5% 0;"/>
             <div class="work-description">
-                <h3 class="capt-title">Illuminate: A Smart Lighting System for Place Making</h3>
-                <p class="capt-body">Illuminate is a project completed for Sensing the City class at University of Pennsylvania. Envisioning a smart lighting system for better place-making, expanding the usefulness of public spaces around the city by activating them after sundown, we developed a arduino-run prototype using motion and light sensors.</p>
+                <h3 class="capt-title">Predicting Trash Cans in Philadelphia</h3>
+                <p class="capt-body">This project was completed as an independent study for the completion of the MUSA degree. This Javascript Map allows you to explore the number of trash cans predicted in each Philadelphia neighborhood. The goal of this project was to aide the City of Philadelphia understand how to use supply-side tacits to address its litter reduction goals as articulated in the CleanPHL program.</p>
             </div>
           </a>
         </figure>
         <figure class="worksamples" id="item2">
-            <a href="item2.html" class="work-link">
-            <img class="work-preview-p" src="work-sample/spatialregression_predictinghousingprice-xs.jpg" alt="Predicting Allegheny County Home Values: Three Types of Spatial Regression Models" style="object-position: 10% 10%;" />
+            <a href="https://ecernea.github.io/keras_trash_cans/" class="work-link">
+            <img class="thumbnail work-preview-l" src="work-sample/KerasGraphic.png" alt="Using Deep Learning to Classify Images of Trash Cans in Philadelphia" style="object-position: 10% 10%;" />
             <div class="work-description">
-                <h3 class="capt-title">Predicting Home Values Using Three Types of Spatial Regression Models</h3>
-                <p class="capt-body">In this study predicting median home values of census tracts in Allegheny County, PA, spatial lag, spatial error, and geographically weighted regression models were used to test if they can better account for spatial autocorrelation found in the OLS model residuals.</p>
+                <h3 class="capt-title">Using Deep Learning to Classify Images of Trash Cans in Philadelphia</h3>
+                <p class="capt-body">This is the accompanying analysis for the Javascript Map showing trash cans in Philadelphia. I used the Keras library in R to create a convoluted neural network to predict if images contained trash cans or not across Philadelphia.</p>
             </div>
           </a>
         </figure>
         <figure class="worksamples" id="item3">
-            <a href="item3.html" class="work-link">
-            <img class="work-preview-l" src="work-sample/suitabilityanalysis_pamedicalmarijuana-xs.jpg" alt="Overlay Suitability Analysis: Locating Medical Marijuana Dispensaries in Philadelphia" style="object-position: 45% 10%;" />
+            <a href="https://pennmusa.github.io/MUSA_801.io/project_4/index.html" class="work-link">
+            <img class="work-preview-l" src="work-sample/MinneapolisGraphic.png" alt="Predicting Lead Presence in Minneapolis" style="object-position: 45% 10%;" />
             <div class="work-description">
-                <h3 class="capt-title">Suitability Visualization with Map Overlay for Medical Marijuana Dispensaries</h3>
-                <p class="capt-body">This simple raster GIS exercise uses three spatial attributes to determine location suitability for medical marijuana dispensaries in Philadelphia County.</p>
+                <h3 class="capt-title">Predicting Lead Presence in Minneapolis</h3>
+                <p class="capt-body">This project was completed as part of the MUSA Practicum at the University of Pennsylvania for the City of Minneapolis. We used machine learning techniques on large datasets to find a model which assigned probabilities to whether or not a house was at risk of containing lead.</p>
             </div></a>
         </figure>
         <figure class="worksamples" id="item4">
-            <a href="https://issuu.com/alanakims/docs/gentrification_studio_workingpaper2" target="_blank" class="work-link">
-                <img class="work-preview-p" src="work-sample/policypaper_gentrification_cover-xs.jpg" alt="Policy Working Paper: Comparative Gentrification Policy for Displacement, Housing Instability, and Homelessness" style="object-position: 10% 10%;" />
+            <a href="Final692/project1.html" target="_blank" class="work-link">
+                <img class="work-preview-p" src="work-sample/logo_MNlead.png" alt="Predicting Household Lead Probabilities in Minneapolis" style="object-position: 10% 10%;" />
                 <div class="work-description">
-                    <h3 class="capt-title">Comparative Gentrification Policy: Displacement, Housing Instability, and Homelessness</h3>
-                    <p class="capt-body">In-depth look at five major American cities -- Denver, Los Angeles, New York City, San Francisco, and Seattle -- for strategies for public policy dealing with processes of gentrification. This policy working paper was completed by a group of students in Fall 2017 as part of the PennDesign City + Regional Planning Fall Studio.</p>
+                    <h3 class="capt-title">Predicting Lead Presence in Minneapolis</h3>
+                    <p class="capt-body">This Javascript Map was made as an accompanying resource for the MUSA Practicum project.</p>
 
                 </div>
                 </a>
         </figure>
         <figure class="worksamples" id="item5">
-            <a href="item5.html" class="work-link">
-            <img class="work-preview-p" src="work-sample/mappingairquality_baltimoreave-xs.jpg" alt="Mapping Air Quality on Baltimore Avenue in West Philadelphia" style="object-position: 10% 30%;" />
+            <a href="KoneCernea_EnviroFinal.html" target"_blank" class="work-link">
+            <img class="work-preview-p" src="work-sample/DenverGraphic.png" alt="Forecasting Urban Development in Denver, 2020" style="object-position: 10% 10%;" />
             <div class="work-description">
-                <h3 class="capt-title">Mapping Air Quality on Baltimore Avenue in West Philadelphia</h3>
-                <p class="capt-body">Data visualization of air quality data, collected over time and space using Arduino microcontroller and Shenyei Air Quality sensor. </p>
+                <h3 class="capt-title">Forecasting Urban Development in Denver, 2020</h3>
+                <p class="capt-body"> Completed as part of a class on Environmental Modeling in the MUSA program. This memo-style brief uses a stepwise modeling approaches to predicting new development in Denver, couched in more general and palatable language. </p>
             </div>
           </a>
         </figure>
         <figure class="worksamples" id="item6">
-            <a href="https://issuu.com/alanakims/docs/reading_forward_moving_the_city_tow" target="_blank" class="work-link">
-                <img class="work-preview-l" src="work-sample/sustainabilityplan_readingforward_cover-xs.jpg" alt="Reading Forward: Moving the City Toward a More Sustainable Future" style="object-position: 90% 10%;" />
+            <a href="OST4GIS-Midterm/midterm/CerneaEvanMidterm.html" target="_blank" class="work-link">
+                <img class="work-preview-l" src="work-sample/StoryMap.PNG" alt="Find Your Housing Counseling Agency" style="object-position: 90% 10%;" />
 <div class="work-description">
-                    <h3 class="capt-title">Reading Forward: Moving the City Toward a More Sustinable Future</h3>
-                    <p class="capt-body">Sustainability plan developed by a team of PennDesign City + Regional Planning students as part of a planning studio. The final plan was awarded American Planning Association PA Southeast Chapter's John E. Pickett Student Scholarship in 2017.</p>
+                    <h3 class="capt-title">Find Your Housing Counseling Agency in Philadelphia</h3>
+                    <p class="capt-body">A simple story map application using Leaflet and JQuery that allows you to explore characteristics of house counseling agencies in Philadelphia.</p>
                 </div>
                               </a>
         </figure>
         <figure class="worksamples" id="item7">
-            <a href="item7.html" class="work-link">
-            <img class="work-preview-l" src="work-sample/gis_medicalmarijuana_communityresistance-xs.jpg" alt="Off Limits: Philadelphia Medical Marijuana Act, Childcare Facilities, and Community Resistance" style="object-position: 40% 10%; " />
+            <a href="http://www.sensingthecity.com/powerdown-challenge-kit/" class="work-link">
+            <img class="work-preview-l" src="work-sample/powerdown.png" alt="Using Arduino to sense home power usage" style="object-position: 40% 10%; " />
             <div class="work-description">
-                <h3 class="capt-title">Off Limits; What Spatial Distribution of Childcare Facilities Can Tell Us About Community Resistance</h3>
-                <p class="capt-body">GIS buffer analysis investigating how the spatial distribution of childcare facilities in the context of PA Medical Marijuana Act passed in 2016. Should we amend the law to allow dispensaries within 500-feet from childcare facilities? </p>
+                <h3 class="capt-title">Using Arduino to sense home power usage</h3>
+                <p class="capt-body">For Allison Lassiter’s Sensing the City Class, my group created a responsive sensor which informs the user of their power use in their home and changes the color of a candle to correspond with high, medium, or low power usage.</p>
             </div>
           </a>
         </figure>
         <figure class="worksamples" id="item8">
-            <a href="item8.html" class="work-link">
-            <img class="work-preview-p" src="work-sample/gisrasteranalysis_landuseallocation_full-xs.jpg" alt="Raster Analysis for Land Use Allocation" style="object-position: 0 80%;" />
+            <a href="https://ecernea.github.io/personal_site/chicago.html" class="work-link">
+            <img class="work-preview-p" src="work-sample/ChicagoGraphic.png" alt="A Data Driven Approach to Rebalancing Chicago's Bikeshare System" style="object-position: 0 80%;" />
             <div class="work-description">
-                <h3 class="capt-title">GIS Raster Analysis for Land Use Allocation</h3>
-                <p class="capt-body">Raster analysis method developed for a class group project looking at the long-term (2030) city development/land use allocation plan.</p>
+                <h3 class="capt-title">A Data Driven Approach to Rebalancing Chicago's Bikeshare System</h3>
+                <p class="capt-body">Completed as the final project for the MUSA 507 class. Given bike share usage data in Chicago, we were tasked with creating a predictive model using OLS, negative binomial, and Poission models to understand how past bike share usage predicted future use. We devised a theoretical mechanism to help bike rebalancers redistribute bikes to the most in-demand stations.</p>
             </div>
           </a>
         </figure>
         <figure class="worksamples" id="item9">
-            <a href="item9.html" class="work-link">
-            <img class="work-preview-p" src="work-sample/gisanalysis_modelingstormwatervulnerability-xs.jpg" alt="Modeling Stormwater Vulnerability in Pierce County, WA" style="object-position: 0 10%;" />
+            <a href="ecernea.github.io/personal_site/boston.html" class="work-link">
+            <img class="work-preview-p" src="work-sample/BostonMap.PNG" alt="Predicting Home Sale Prices in Boston" style="object-position: 0 10%;" />
             <div class="work-description">
-                <h3 class="capt-title">Modeling Stormwater Vulnerability in Pierce County, WA</h3>
-                <p class="capt-body">This GIS environment assessment examines land use patterns around streams as the sources of stormwater runoff stressors in Water Resource Inventory Area (WRIA) 10. </p>
+                <h3 class="capt-title">Predicting Home Sale Prices in Boston</h3>
+                <p class="capt-body">This exercise was completed as part of a competition in the MUSA 507 class. The goal was to use features known about houses in Boston to predict the prices of houses withheld from the dataset using only linear regression. This project was meant to simulate a Kaggle competition.</p>
             </div>
           </a>
         </figure>
@@ -126,7 +126,7 @@
     <div class="footer">
         <ul class="footer-bar" role="footer">
             <li class="social-media">
-                <a href="https://github.com/aakims">
+                <a href="https://github.com/ecernea">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fa fa-github fa-stack-1x fa-inverse"></i>
@@ -134,7 +134,7 @@
                 </a>
             </li>
             <li class="social-media">
-                <a href="https://linkedin.com/in/aakims">
+                <a href="https://www.linkedin.com/in/evan-cernea-74602396/">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -142,7 +142,7 @@
                 </a>
             </li>
             <li class="social-media">
-                <a href="mailto:alanakim12@gmail.com">
+                <a href="mailto:evan.cernea@gmail.com">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
@@ -150,7 +150,7 @@
                 </a>
             </li>
         </ul>
-        <p class="copyright text-muted">copyright &copy; alana s kim 2018</p>
+        <p class="copyright text-muted">copyright &copy; evan h cernea 2018 <br> credit to <a href="https://github.com/aakims/mapsandstories"> alana s. kim</a> for the css/js</p>
     </div>
 </body>
 
