--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Alana Kim - Welcome to My Page</title>
+    <title>Evan Cernea - Welcome to My Page</title>
     <link rel="icon" type="image/png" href="img/logos_small-logo.png" sizes = "16x16"/>
     <!-- Custom fonts for this template -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -21,7 +21,7 @@
     <div class="head-wrapper">
         <div class="header">
             <a href="index.html">
-            <img class="logo" src="img/logos_full-name-logo.png">
+            <img class="logo" src="img/EC-logo.png">
             </a>
         </div>
         <div class="navbar">
@@ -39,15 +39,15 @@
         </div>
     </div>
     <div class="resume">
-        <a href="documents/AlanaKim_Resume.pdf" download><h4>CLICK HERE TO DOWNLOAD PDF</h4></a>
+        <a href="documents/CERNEA_EVAN_CV_2018.pdf" download><h4>CLICK HERE TO DOWNLOAD PDF</h4></a>
         <div class="resume-preview">
-            <img src="img/AlanaKim_Resume.jpg" alt="Alana Kim - Resume">
+            <img src="img/CERNEA_EVAN_CV_2018-1.jpg" alt="Evan Cernea - Resume">
         </div>
     </div>
     <div class="footer">
         <ul class="footer-bar" role="footer">
             <li class="social-media">
-                <a href="https://github.com/aakims">
+                <a href="https://github.com/ecernea">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fa fa-github fa-stack-1x fa-inverse"></i>
@@ -55,7 +55,7 @@
                 </a>
             </li>
             <li class="social-media">
-                <a href="https://linkedin.com/in/aakims">
+                <a href="https://www.linkedin.com/in/evan-cernea-74602396/">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -63,7 +63,7 @@
                 </a>
             </li>
             <li class="social-media">
-                <a href="mailto:alanakim12@gmail.com">
+                <a href="mailto:evan.cernea@gmail.com">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
@@ -71,7 +71,7 @@
                 </a>
             </li>
         </ul>
-        <p class="copyright text-muted">copyright &copy; alana s kim 2018</p>
+        <p class="copyright text-muted">copyright &copy; evan h cernea 2018<br>credit to <a href="https://github.com/aakims/mapsandstories">alana s. kim</a> for the css/js</p>
     </div>
     </div>
     </div>
